...
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locationButton"
                android:src="@drawable/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:background="@drawable/roundedbutton"
                android:padding="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
...
            <Button
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:text="+"
                android:background="@drawable/roundedbutton"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:id="@+id/nodeModeButton"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="15dp"/>
...
            <Button
                android:background="@drawable/roundedbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_node"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/addNodeBtn"
                android:layout_above="@+id/addNodeMarkerBtn"
                android:layout_centerHorizontal="true"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:visibility="gone"/>

...
            <Button
                android:background="@drawable/roundedbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Place Node"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/moveNodeBtn"
                android:layout_above="@+id/moveNodeMarkerBtn"
                android:layout_centerHorizontal="true"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:visibility="gone"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moveNodeModeBtn"
                android:background="@drawable/roundedbutton"
                android:src="@drawable/ic_swap_horiz_black_36dp"
                android:padding="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
...
